--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -1,10 +1,8 @@
 # Connect with ESP8266
 
-This article mainly introduces how to use `PubSubClient` in the ESP8266 project, and implement the connection, subscription, messaging, unsubscribing and other functions between the client and MQTT broker.
+This article mainly introduces how to use `PubSubClient` in the ESP8266 project,  including implementing the connection, subscription, messaging, and other functions between the client and MQTT broker.
 
 [ESP8266](https://www.espressif.com/en/products/modules/esp8266) provides a highly integrated Wi-Fi SoC solution. Its low-power, compact design, and high stability can meet user's requirements. ESP8266 has a complete and self-contained Wi-Fi network function, which can be applied independently or can run as a slave at another host MCU.
-
-[MQTT](https://www.emqx.com/en/mqtt) is a kind of **lightweight IoT messaging protocol** based on the publish/subscribe model. This protocol provides one-to-many message distribution and decoupling of applications. It has several advantages which are low transmission consumption and protocol data exchange, minimized network traffic, three different service quality levels of message which can meet different delivery needs.
 
 ## Preconditions
 
@@ -15,12 +13,14 @@ This article uses the [Arduino IDE](https://www.arduino.cc/en/software) as the c
 
 ## Install dependencies
 
-1. Install ESP8266 development board
-   Click Tools -> Development Board -> Development Board Management -> Search ESP8266 -> Install
-2. Install PubSub client
-   Project -> Load library -> Library manager... -> Search PubSubClient -> Install PubSubClient by Nick O’Leary
+In Arduino IDE, complete the following installations:
 
-## Connection
+1. Install ESP8266 development board.
+   Click **Tools** -> **Development Board** -> **Development Board Management**. Search ESP8266 and click **Install**.
+2. Install PubSub client.
+   Click**Project** -> **Load library** -> **Library manager...**. Search PubSubClient and Install PubSubClient by Nick O’Leary.
+
+## Connect to MQTT Broker
 
 > Please find the relevant address and port information in the Deployment Overview of the Console. Please note that if it is the basic edition, the port is not 1883 or 8883, please confirm the port.
 
@@ -33,21 +33,21 @@ This article will use the [free public MQTT broker](https://www.emqx.com/en/mqtt
 
 > Please find the relevant address and port information in the Deployment Overview in the Console. Please note that if it is Standard deployment, the ports will be 15xxx.
 
-**This article will cover connecting via the TCP port and SSL/TLS port respectively, for those using Serverless deployments, please see the SSL/TLS port connection example.**
+This article will cover connecting via the TCP port and SSL/TLS port respectively, for those using Serverless deployments, please see the SSL/TLS port connection example. MQTT over TCP port and MQTT over SSL/TLS port connections are different in the connection settings, the code is the same in the publish and subscribe functions.
 
-### Connection via MQTT over TCP port
-MQTT over TCP port and MQTT over SSL/TLS port connections are different in the connection settings, the code is the same in the publish and subscribe functions.
+### Connect to MQTT Broker over TCP port
+After you finish the connection settings, follow the steps below to write codes in Arduino IDE:
 
-
-#### Import libraries ESP8266WiFi and PubSubClient.
+1. Import libraries ESP8266WiFi and PubSubClient.
 
 ```c
 #include <ESP8266WiFi.h>
 #include <PubSubClient.h>
 ```
 
-#### Set Wi-Fi name and password, and connection address and port
-If you are using EMQX Cloud, please refer to [Serverless Authentication](../deployments/auth_serverless.md) and [Dedicated Authentication](../deployments/auth_dedicated.md) to set username and password.
+2. Set Wi-Fi name and password, and connection address and port.
+
+   If you are using EMQX Cloud, please refer to [Serverless Authentication](../deployments/auth_serverless.md) and [Dedicated Authentication](../deployments/auth_dedicated.md) to set username and password.
 
 ```c
 // WiFi
@@ -62,7 +62,7 @@ const char *mqtt_password = "public"; // password for authentication
 const int mqtt_port = 1883; // port of MQTT over TCP
 ```
 
-#### Open a serial connection for facilitating to output of the result of the program and connecting to the Wi-Fi network.
+3. Open a serial connection to output of the result of the program and connecting to the Wi-Fi network.
 
 ```c
 // Set software serial baud to 115200;
@@ -75,7 +75,7 @@ while (WiFi.status() != WL_CONNECTED) {
 }
 ```
 
-#### Set MQTT broker, write callback function, and print connection information on the serial monitor at the same time.
+4. Set MQTT broker, write callback function, and print connection information on the serial monitor at the same time.
 
 ```c
 client.setServer(mqtt_broker, mqtt_port);
@@ -93,7 +93,7 @@ while (!client.connected()) {
 }
 ```
 
-#### After successfully connecting to the MQTT broker, ESP8266 will publish messages and subscribe to the MQTT broker.
+5. After successfully connecting to the MQTT broker, ESP8266 will publish messages on topic `ESP32/test` to the MQTT server and subscribe to messages on topic `esp8266/test`.
 
 ```c
 // publish and subscribe
@@ -101,7 +101,7 @@ client.publish(topic, "hello emqx"); // publish to the topic
 client.subscribe(topic); // subscribe from the topic
 ```
 
-#### Printing the topic name to the serial port and then print every byte of received messages.
+6. Printing the topic name to the serial port and then print every byte of received messages.
 
 ```c
 void callback(char *topic, byte *payload, unsigned int length) {
@@ -116,7 +116,7 @@ void callback(char *topic, byte *payload, unsigned int length) {
 }
 ```
 
-#### The full code
+The complete code is displayed as follows:
 
 ```c
 #include <ESP8266WiFi.h>
@@ -182,11 +182,10 @@ void loop() {
 }
 ```
 
-### Connection via MQTT over TLS/SSL port
+### Connect MQTT Broker over TLS/SSL port
 MQTT over TCP port and MQTT over SSL/TLS port connections are different in the connection settings, the code is the same in the publish and subscribe functions.
 
-
-#### Import libraries ESP8266WiFi and PubSubClient.
+1. Import libraries ESP8266WiFi and PubSubClient.
 
 ```c
 #include <ESP8266WiFi.h>
@@ -194,7 +193,8 @@ MQTT over TCP port and MQTT over SSL/TLS port connections are different in the c
 #include <WiFiClientSecureBearSSL.h>
 ```
 
-#### Set Wi-Fi name and password, and connection address and port
+2. Set Wi-Fi name and password, and connection address and port.
+
 If you are using EMQX Cloud, please refer to [Serverless Authentication](../deployments/auth_serverless.md) and [Dedicated Authentication](../deployments/auth_dedicated.md) to set username and password.
 
 ```c
@@ -210,8 +210,9 @@ const char *mqtt_password = "public"; // password for authentication
 const int mqtt_port = 8883; // port of MQTT over TLS/SSL
 ```
 
-#### Set server-side certificate
-If you are using **public MQTT broker**, **Serverless deployment** or **Standard deployment** for a TLS/SSL port connection, [download CA certificate](https://assets.emqx.com/data/emqxsl-ca.crt) here. If you are using **Professional deployment** for TLS/SSL port connections, please use your own server-side certificate.
+3. Set server-side certificate.
+
+   If you are using public MQTT broker, Serverless deployment or Standard deployment for a TLS/SSL port connection, [download CA certificate](https://assets.emqx.com/data/emqxsl-ca.crt) here. If you are using Professional deployment for TLS/SSL port connections, please use your own server-side certificate.
 
 ```c
 // load DigiCert Global Root CA ca_cert
@@ -243,7 +244,7 @@ BearSSL::WiFiClientSecure espClient; //
 PubSubClient client(espClient); //
 ```
 
-#### Open a serial connection for facilitating to output of the result of the program and connecting to the Wi-Fi network.
+4. Open a serial connection to output the result of the program and connect to the Wi-Fi network.
 
 ```c
 // Set software serial baud to 115200;
@@ -257,7 +258,7 @@ while (WiFi.status() != WL_CONNECTED) {
 Serial.println("Connected to the WiFi network");
 ```
 
-#### Set certificate, and MQTT broker, write callback function, and print connection information on the serial monitor at the same time.
+5. Set certificate and MQTT broker. Write callback function, and print connection information on the serial monitor at the same time.
 
 ```c
 BearSSL::X509List ca(ca_cert);
@@ -279,7 +280,7 @@ while (!client.connected()) {
 }
 ```
 
-#### After successfully connecting to the MQTT broker, ESP8266 will publish messages and subscribe to the MQTT broker.
+6. After successfully connecting to the MQTT broker, ESP8266 will publish messages and subscribe to the MQTT broker.
 
 ```c
 // publish and subscribe
@@ -287,7 +288,7 @@ client.publish(topic, "hello emqx"); // publish to the topic
 client.subscribe(topic); // subscribe from the topic
 ```
 
-#### Printing the topic name to the serial port and then print every byte of received messages.
+7. Print the topic name to the serial port and then print every byte of received messages.
 
 ```c
 void callback(char *topic, byte *payload, unsigned int length) {
@@ -302,7 +303,7 @@ void callback(char *topic, byte *payload, unsigned int length) {
 }
 ```
 
-#### The full code
+The complete code is displayed as follows:
 
 ```c
 #include <ESP8266WiFi.h>
@@ -401,17 +402,18 @@ void loop() {
 }
 ```
 
+## Test Connection
 
+After the client has successfully connected to the MQTT broker, you can use the Arduino IDE and MQTT X to test the connection.
 
-## Test
-
-1. Please use Arduino IDE to upload the complete code to ESP8266 and open the serial monitor
+1. Use Arduino IDE to upload the complete code to ESP8266 and open the serial monitor.
    ![esp8266_connection](./_assets/esp8266_connection.png)
-2. Establish the connection between MQTT X client and MQTT broker, and send messages to ESP8266
+2. Establish the connection between MQTT X client and MQTT broker, and send messages to ESP8266.
    ![esp8266_mqttx](./_assets/esp8266_mqttx.png)
 3. View the messages ESP8266 received in the serial monitor
    ![esp8266_receive](./_assets/esp8266_receive.png)
 
 ## More
 
-In summary, we have implemented the creation of an MQTT connection in a ESP8266 project, simulated subscribing, sending and receiving messages, unsubscribing, and disconnecting between the client and MQTT broker. You can download the source code of the example [here](https://github.com/emqx/MQTT-Client-Examples/tree/master/mqtt-client-ESP8266), and you can also find more demo examples in other languages on [GitHub](https://github.com/emqx/MQTT-Client-Examples).
+In summary, we have implemented the creation of an MQTT connection in an ESP8266 project, and simulated connecting, subscribing, sending and receiving messages between the client and MQTT broker.  You can download the source code of the example [here](https://github.com/emqx/MQTT-Client-Examples/tree/master/mqtt-client-ESP8266), and you can also find more demo examples in other languages on [GitHub](https://github.com/emqx/MQTT-Client-Examples).
+
