feat(docs): ESP 8266 & ESP 32 updates

--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -6,9 +6,18 @@ This article mainly introduces how to use `PubSubClient` in the ESP8266 project,
 
 ## Preconditions
 
-> 1.  The deployment has been created. You can view connection-related information under Deployment Overview. Please make sure that the deployment status is running. At the same time, you can use WebSocket to test the connection to the MQTT server.
-> 2.  Set the user name and password in `Authentication & ACL` > `Authentication` for connection verification.
+### Get an MQTT broker
 
+1. You can use the [free public MQTT broker](https://www.emqx.com/en/mqtt/public-mqtt5-broker) provided by EMQX. This service was created based on the [EMQX Cloud](https://www.emqx.com/en/cloud). The information about broker access is as follows:
+
+- Broker: **broker.emqx.io**
+- TCP Port: **1883**
+- SSL/TLS Port: **8883**
+
+2. You can [create a deployment](../create/overview.md) as well. Find connection information in deployment overview. Make sure the deployment is running. Use the TCP port or TLS/SSL port to test the connection to the MQTT server.
+3. If you are creating your own deployment, check [Authentication](../deployments/auth_overview.md) and set the username and password in `Authentication & ACL` > `Authentication` for verification.
+
+### Arduino IDE
 This article uses the [Arduino IDE](https://www.arduino.cc/en/software) as the code editor and uploader. The open-source Arduino Software (IDE) makes it easy to write code and upload it to the board. This software can be used with any Arduino board.
 
 ## Install dependencies
@@ -21,17 +30,6 @@ In Arduino IDE, complete the following installations:
    Click**Project** -> **Load library** -> **Library manager...**. Search PubSubClient and Install PubSubClient by Nick O’Leary.
 
 ## Connect to MQTT Broker
-
-> Please find the relevant address and port information in the Deployment Overview of the Console. Please note that if it is the basic edition, the port is not 1883 or 8883, please confirm the port.
-
-
-This article will use the [free public MQTT broker](https://www.emqx.com/en/mqtt/public-mqtt5-broker) provided by EMQX. This service was created based on the [EMQX Cloud](https://www.emqx.com/en/cloud). The information about broker access is as follows:
-
-- Broker: **broker.emqx.io**
-- TCP Port: **1883**
-- SSL/TLS Port: **8883**
-
-> Please find the relevant address and port information in the Deployment Overview in the Console. Please note that if it is Standard deployment, the ports will be 15xxx.
 
 This article will cover connecting via the TCP port and SSL/TLS port respectively, for those using Serverless deployments, please see the SSL/TLS port connection example. MQTT over TCP port and MQTT over SSL/TLS port connections are different in the connection settings, the code is the same in the publish and subscribe functions.
 
@@ -47,7 +45,8 @@ After you finish the connection settings, follow the steps below to write codes 
 
 2. Set Wi-Fi name and password, and connection address and port.
 
-   If you are using EMQX Cloud, please refer to [Serverless Authentication](../deployments/auth_serverless.md) and [Dedicated Authentication](../deployments/auth_dedicated.md) to set username and password.
+> The sample code will use a public MQTT server to connect, and the public MQTT server does not require a username and password. If you create a deployment, please refer to [Serverless Auth](../deployments/auth_serverless.md) or [Dedicated Auth](../deployments/auth_dedicated.md) to set username and password.
+
 
 ```c
 // WiFi
@@ -195,7 +194,8 @@ MQTT over TCP port and MQTT over SSL/TLS port connections are different in the c
 
 2. Set Wi-Fi name and password, and connection address and port.
 
-If you are using EMQX Cloud, please refer to [Serverless Authentication](../deployments/auth_serverless.md) and [Dedicated Authentication](../deployments/auth_dedicated.md) to set username and password.
+> The sample code will use a public MQTT server to connect, and the public MQTT server does not require a username and password. If you create a deployment, please refer to [Serverless Auth](../deployments/auth_serverless.md) or [Dedicated Auth](../deployments/auth_dedicated.md) to set username and password.
+
 
 ```c
 // WiFi
@@ -240,8 +240,11 @@ const char * ca_cert = \
 "CAUw7C29C79Fv1C5qfPrmAESrciIxpg0X40KPMbp1ZWVbd4="\
 "-----END CERTIFICATE-----\n";
 
-BearSSL::WiFiClientSecure espClient; //
-PubSubClient client(espClient); //
+
+// init wifi client
+BearSSL::WiFiClientSecure espClient; 
+// use wifi client to init mqtt client
+PubSubClient client(espClient); 
 ```
 
 4. Open a serial connection to output the result of the program and connect to the Wi-Fi network.
@@ -347,8 +350,10 @@ const char * ca_cert = \
 "CAUw7C29C79Fv1C5qfPrmAESrciIxpg0X40KPMbp1ZWVbd4="\
 "-----END CERTIFICATE-----\n";
 
-BearSSL::WiFiClientSecure espClient;
-PubSubClient client(espClient);
+// init wifi client
+BearSSL::WiFiClientSecure espClient; 
+// use wifi client to init mqtt client
+PubSubClient client(espClient); 
 
 void setup() {
   Serial.begin(115200);
