Updated esp32 and esp8266

--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -4,23 +4,24 @@ This article mainly introduces how to use `PubSubClient` in the ESP8266 project,
 
 [ESP8266](https://www.espressif.com/en/products/modules/esp8266) provides a highly integrated Wi-Fi SoC solution. Its low-power, compact design, and high stability can meet user's requirements. ESP8266 has a complete and self-contained Wi-Fi network function, which can be applied independently or can run as a slave at another host MCU.
 
-## Preconditions
+This article demonstrates how to connect an ESP8266 client to MQTT broker via the TCP port and TLS/SSL port respectively. For Serverless deployments, see the demonstration on TLS/SSL port connection. Settings for connections over TCP port are different from those for connections over TLS/SSL port, but the code used in the publishing and subscribing functions is the same.
 
-### Get an MQTT broker
+## Preparations
+
+Before connecting the ESP8266 client to the MQTT Broker, you need to get the broker and client ready.
+
+### Get an MQTT Broker
 
 1. You can use the [free public MQTT broker](https://www.emqx.com/en/mqtt/public-mqtt5-broker) provided by EMQX. This service was created based on the [EMQX Cloud](https://www.emqx.com/en/cloud). The information about broker access is as follows:
-
-- Broker: **broker.emqx.io**
-- TCP Port: **1883**
-- SSL/TLS Port: **8883**
+   - Broker: **broker.emqx.io**
+   - TCP Port: **1883**
+   - SSL/TLS Port: **8883**
 
 2. You can [create a deployment](../create/overview.md) as well. Find connection information in deployment overview. Make sure the deployment is running. Use the TCP port or TLS/SSL port to test the connection to the MQTT server.
 3. If you are creating your own deployment, check [Authentication](../deployments/auth_overview.md) and set the username and password in `Authentication & ACL` > `Authentication` for verification.
 
-### Arduino IDE
+### Install Client in Arduino IDE
 This article uses the [Arduino IDE](https://www.arduino.cc/en/software) as the code editor and uploader. The open-source Arduino Software (IDE) makes it easy to write code and upload it to the board. This software can be used with any Arduino board.
-
-## Install dependencies
 
 In Arduino IDE, complete the following installations:
 
@@ -29,12 +30,8 @@ In Arduino IDE, complete the following installations:
 2. Install PubSub client.
    Click**Project** -> **Load library** -> **Library manager...**. Search PubSubClient and Install PubSubClient by Nick O’Leary.
 
-## Connect to MQTT Broker
-
-This article will cover connecting via the TCP port and SSL/TLS port respectively, for those using Serverless deployments, please see the SSL/TLS port connection example. MQTT over TCP port and MQTT over SSL/TLS port connections are different in the connection settings, the code is the same in the publish and subscribe functions.
-
-### Connect to MQTT Broker over TCP port
-After you finish the connection settings, follow the steps below to write codes in Arduino IDE:
+## Connect to MQTT Broker over TCP Port
+This section describes how to connect an ESP8266 client to MQTT broker over TCP port in Arduino IDE.
 
 1. Import libraries ESP8266WiFi and PubSubClient.
 
@@ -61,7 +58,7 @@ const char *mqtt_password = "public"; // password for authentication
 const int mqtt_port = 1883; // port of MQTT over TCP
 ```
 
-3. Open a serial connection to output of the result of the program and connecting to the Wi-Fi network.
+3. Open a serial connection to output the result of the program and connect to the Wi-Fi network.
 
 ```c
 // Set software serial baud to 115200;
@@ -92,7 +89,7 @@ while (!client.connected()) {
 }
 ```
 
-5. After successfully connecting to the MQTT broker, ESP8266 will publish messages on topic `ESP32/test` to the MQTT server and subscribe to messages on topic `esp8266/test`.
+5. After successfully connecting to the MQTT broker, ESP8266 client will publish messages on topic `ESP8266/test` to the MQTT server and subscribe to messages on topic `esp8266/test`.
 
 ```c
 // publish and subscribe
@@ -100,7 +97,7 @@ client.publish(topic, "hello emqx"); // publish to the topic
 client.subscribe(topic); // subscribe from the topic
 ```
 
-6. Printing the topic name to the serial port and then print every byte of received messages.
+6. Print the topic name to the serial port and then print every byte of received messages.
 
 ```c
 void callback(char *topic, byte *payload, unsigned int length) {
@@ -181,8 +178,8 @@ void loop() {
 }
 ```
 
-### Connect MQTT Broker over TLS/SSL port
-MQTT over TCP port and MQTT over SSL/TLS port connections are different in the connection settings, the code is the same in the publish and subscribe functions.
+### Connect MQTT Broker over TLS/SSL Port
+This section describes how to connect an ESP8266 client to MQTT broker over TLS/SSL port in Arduino IDE. Settings for connections over TLS/SSL ports are different from those for connections over TCP port, but the code is the same in the publishing and subscribing functions.
 
 1. Import libraries ESP8266WiFi and PubSubClient.
 
@@ -212,7 +209,7 @@ const int mqtt_port = 8883; // port of MQTT over TLS/SSL
 
 3. Set server-side certificate.
 
-   If you are using public MQTT broker, Serverless deployment or Standard deployment for a TLS/SSL port connection, [download CA certificate](https://assets.emqx.com/data/emqxsl-ca.crt) here. If you are using Professional deployment for TLS/SSL port connections, please use your own server-side certificate.
+   If you are using a public MQTT broker, [download CA certificate](https://assets.emqx.com/data/emqxsl-ca.crt) here for TLS/SSL port connection with Serverless or Standard deployment. If you are using Professional deployment, use your own server-side certificate.
 
 ```c
 // load DigiCert Global Root CA ca_cert
@@ -283,7 +280,7 @@ while (!client.connected()) {
 }
 ```
 
-6. After successfully connecting to the MQTT broker, ESP8266 will publish messages and subscribe to the MQTT broker.
+6. After successfully connecting to the MQTT broker, ESP8266 client will publish messages and subscribe to the MQTT broker.
 
 ```c
 // publish and subscribe
@@ -409,7 +406,7 @@ void loop() {
 
 ## Test Connection
 
-After the client has successfully connected to the MQTT broker, you can use the Arduino IDE and MQTT X to test the connection.
+After the ESP8266 client has successfully connected to the MQTT broker, you can use the Arduino IDE and MQTT X to test the connection.
 
 1. Use Arduino IDE to upload the complete code to ESP8266 and open the serial monitor.
    ![esp8266_connection](./_assets/esp8266_connection.png)
