Update esp32 and esp8266 (ZH&EN align)

--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -6,22 +6,25 @@ This article mainly introduces how to use `PubSubClient` in the ESP8266 project,
 
 This article demonstrates how to connect an ESP8266 client to MQTT broker via the TCP port and TLS/SSL port respectively. For Serverless deployments, see the demonstration on TLS/SSL port connection. Settings for connections over TCP port are different from those for connections over TLS/SSL port, but the code used in the publishing and subscribing functions is the same.
 
-## Preparations
+## Prerequisites
 
-Before connecting the ESP8266 client to the MQTT Broker, you need to get the broker and client ready.
+Before the connection, you need to get the broker and client ready.
 
 ### Get an MQTT Broker
 
-1. You can use the [free public MQTT broker](https://www.emqx.com/en/mqtt/public-mqtt5-broker) provided by EMQX. This service was created based on the [EMQX Cloud](https://www.emqx.com/en/cloud). The information about broker access is as follows:
-   - Broker: **broker.emqx.io**
-   - TCP Port: **1883**
-   - SSL/TLS Port: **8883**
+You can use the [free public MQTT broker](https://www.emqx.com/en/mqtt/public-mqtt5-broker) provided by EMQX. This service was created based on the [EMQX Cloud](https://www.emqx.com/en/cloud). The information about broker access is as follows:
+- Broker: **broker.emqx.io**
+- TCP Port: **1883**
+- SSL/TLS Port: **8883**
 
-2. You can [create a deployment](../create/overview.md) as well. Find connection information in deployment overview. Make sure the deployment is running. Use the TCP port or TLS/SSL port to test the connection to the MQTT server.
-3. If you are creating your own deployment, check [Authentication](../deployments/auth_overview.md) and set the username and password in `Authentication & ACL` > `Authentication` for verification.
+You can [create a deployment](../create/overview.md) as well. Find connection information in deployment overview. Make sure the deployment is running. Use the TCP port or TLS/SSL port to test the connection to the MQTT server.
+
+If you are creating your own deployment, check [Authentication](../deployments/auth_overview.md) and set the username and password in `Authentication & ACL` > `Authentication` for verification.
 
 ### Arduino IDE
 This article uses the [Arduino IDE](https://www.arduino.cc/en/software) as the code editor and uploader. The open-source Arduino Software (IDE) makes it easy to write code and upload it to the board. This software can be used with any Arduino board.
+
+## Installation Dependencies
 
 In Arduino IDE, complete the following installations:
 
@@ -30,7 +33,7 @@ In Arduino IDE, complete the following installations:
 2. Install PubSub client.
    Click**Project** -> **Load library** -> **Library manager...**. Search PubSubClient and Install PubSubClient by Nick O’Leary.
 
-## Connect to MQTT Broker over TCP Port
+## Connect over TCP Port
 This section describes how to connect an ESP8266 client to MQTT broker over TCP port in Arduino IDE.
 
 1. Import libraries ESP8266WiFi and PubSubClient.
@@ -178,7 +181,7 @@ void loop() {
 }
 ```
 
-### Connect MQTT Broker over TLS/SSL Port
+## Connect over TLS/SSL Port
 This section describes how to connect an ESP8266 client to MQTT broker over TLS/SSL port in Arduino IDE. Settings for connections over TLS/SSL ports are different from those for connections over TCP port, but the code is the same in the publishing and subscribing functions.
 
 1. Import libraries ESP8266WiFi and PubSubClient.
