--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -10,7 +10,7 @@ This article demonstrates how to connect an ESP8266 client to MQTT broker via th
 
 Before the connection, you need to get the broker and client ready.
 
-### Get an MQTT Broker
+### Get MQTT Broker
 
 You can use the [free public MQTT broker](https://www.emqx.com/en/mqtt/public-mqtt5-broker) provided by EMQX. This service was created based on the [EMQX Cloud](https://www.emqx.com/en/cloud). The information about broker access is as follows:
 - Broker: **broker.emqx.io**
