--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -415,7 +415,7 @@ After the ESP8266 client has successfully connected to the MQTT broker, you can 
    ![esp8266_connection](./_assets/esp8266_connection.png)
 2. Establish the connection between MQTT X client and MQTT broker, and send messages to ESP8266.
    ![esp8266_mqttx](./_assets/esp8266_mqttx.png)
-3. View the messages ESP8266 received in the serial monitor
+3. View the messages ESP8266 received in the serial monitor.
    ![esp8266_receive](./_assets/esp8266_receive.png)
 
 ## More
