fix(docs): esp 8266 code fix

--- a/zh_CN/connect_to_deployments/esp8266.md
+++ b/zh_CN/connect_to_deployments/esp8266.md
@@ -192,7 +192,6 @@ void loop() {
 ```c
 #include <ESP8266WiFi.h>
 #include <PubSubClient.h>
-#include <WiFiClientSecureBearSSL.h>
 ```
 
 2. 设置 Wi-Fi 名称和密码，以及 MQTT 服务器连接地址和端口。
@@ -202,8 +201,8 @@ void loop() {
 
 ```c
 // WiFi
-const char *ssid = "mousse"; // Enter your WiFi name
-const char *password = "qweqweqwe";  // Enter WiFi password
+const char *ssid = "[WIFI SSID]"; // Enter your WiFi name
+const char *password = "[WIFI password]";  // Enter WiFi password
 
 // MQTT Broker
 const char *mqtt_broker = "broker.emqx.io"; // broker address
@@ -213,38 +212,25 @@ const char *mqtt_password = "public"; // password for authentication
 const int mqtt_port = 8883; // port of MQTT over TLS/SSL
 ```
 
-3. 添加服务端证书。如果您在使用公共 MQTT Broker、Serverless 部署或基础版部署的 TLS/SSL 端口连接，在此[下载 CA 证书](https://assets.emqx.com/data/emqxsl-ca.crt)。 如您使用专业版部署的 TLS/SSL 端口连接，请使用自己的服务端证书。
+3. EMQX 服务器的常见指纹，仅供参考。如果你没有使用 Serverless 部署或公共 broker、 你需要计算出你的服务器证书的sha1指纹 并更新下面的'fingerprint'变量。
 
 ```c
-// load DigiCert Global Root CA ca_cert
-const char * ca_cert = \
-  "-----BEGIN CERTIFICATE-----\n"\
-"MIIDrzCCApegAwIBAgIQCDvgVpBCRrGhdWrJWZHHSjANBgkqhkiG9w0BAQUFADBh\n"\
-"MQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3\n"\
-"d3cuZGlnaWNlcnQuY29tMSAwHgYDVQQDExdEaWdpQ2VydCBHbG9iYWwgUm9vdCBD\n"\
-"QTAeFw0wNjExMTAwMDAwMDBaFw0zMTExMTAwMDAwMDBaMGExCzAJBgNVBAYTAlVT\n"\
-"MRUwEwYDVQQKEwxEaWdpQ2VydCBJbmMxGTAXBgNVBAsTEHd3dy5kaWdpY2VydC5j\n"\
-"b20xIDAeBgNVBAMTF0RpZ2lDZXJ0IEdsb2JhbCBSb290IENBMIIBIjANBgkqhkiG\n"\
-"9w0BAQEFAAOCAQ8AMIIBCgKCAQEA4jvhEXLeqKTTo1eqUKKPC3eQyaKl7hLOllsB\n"\
-"CSDMAZOnTjC3U/dDxGkAV53ijSLdhwZAAIEJzs4bg7/fzTtxRuLWZscFs3YnFo97\n"\
-"nh6Vfe63SKMI2tavegw5BmV/Sl0fvBf4q77uKNd0f3p4mVmFaG5cIzJLv07A6Fpt\n"\
-"43C/dxC//AH2hdmoRBBYMql1GNXRor5H4idq9Joz+EkIYIvUX7Q6hL+hqkpMfT7P\n"\
-"T19sdl6gSzeRntwi5m3OFBqOasv+zbMUZBfHWymeMr/y7vrTC0LUq7dBMtoM1O/4\n"\
-"gdW7jVg/tRvoSSiicNoxBN33shbyTApOB6jtSj1etX+jkMOvJwIDAQABo2MwYTAO\n"\
-"BgNVHQ8BAf8EBAMCAYYwDwYDVR0TAQH/BAUwAwEB/zAdBgNVHQ4EFgQUA95QNVbR\n"\
-"TLtm8KPiGxvDl7I90VUwHwYDVR0jBBgwFoAUA95QNVbRTLtm8KPiGxvDl7I90VUw\n"\
-"DQYJKoZIhvcNAQEFBQADggEBAMucN6pIExIK+t1EnE9SsPTfrgT1eXkIoyQY/Esr\n"\
-"hMAtudXH/vTBH1jLuG2cenTnmCmrEbXjcKChzUyImZOMkXDiqw8cvpOp/2PV5Adg\n"\
-"06O/nVsJ8dWO41P0jmP6P6fbtGbfYmbW0W5BjfIttep3Sp+dWOIrWcBAI+0tKIJF\n"\
-"PnlUkiaY4IBIqDfv8NZ5YBberOgOzW6sRBc4L0na4UU+Krk2U886UAb3LujEV0ls\n"\
-"YSEY1QSteDwsOoBrp+uvFRTp2InBuThs4pFsiv9kuXclVzDAGySj4dzp30d8tbQk\n"\
-"CAUw7C29C79Fv1C5qfPrmAESrciIxpg0X40KPMbp1ZWVbd4="\
-"-----END CERTIFICATE-----\n";
-
 // init wifi client
-BearSSL::WiFiClientSecure espClient; 
-// use wifi client to init mqtt client
-PubSubClient client(espClient); 
+WiFiClientSecure espClient;
+PubSubClient client(espClient);
+
+/*
+  The common fingerprints of EMQX broker, for reference only.
+  If you are not using EMQX Cloud Serverless or public EMQX broker,
+  you need to calculate the sha1 fingerprint of your server certificate
+  and update the 'fingerprint' variable below.
+*/
+// 1. fingerprint of public emqx broker. Host: broker.emqx.io
+const char* fingerprint = "B6 C6 FF 82 C6 59 09 BB D6 39 80 7F E7 BC 10 C9 19 C8 21 8E";
+// 2. fingerprint of EMQX Cloud Serverless. Host: *.emqxsl.com
+// const char* fingerprint = "42:AE:D8:A3:42:F1:C4:1F:CD:64:9C:D7:4B:A1:EE:5B:5E:D7:E2:B5";
+// 3. fingerprint of EMQX Cloud Serverless. Host: *.emqxsl.cn
+// const char* fingerprint = "7E:52:D3:84:48:3C:5A:9F:A4:39:9A:8B:27:01:B1:F8:C6:AD:D4:47";
 ```
 
 4. 打开串行连接，以便于输出程序的结果并且连接到 Wi-Fi 网络。
@@ -261,11 +247,11 @@ while (WiFi.status() != WL_CONNECTED) {
 Serial.println("Connected to the WiFi network");
 ```
 
-5. 设置证书并使用 PubSubClient 连接到公共 MQTT Broker。
+5. 设置指纹并使用 PubSubClient 连接到公共 MQTT Broker。
 
 ```c
-BearSSL::X509List ca(ca_cert);
-espClient.setTrustAnchors(&ca);
+// set fingerprint
+espClient.setFingerprint(fingerprint);
 client.setServer(mqtt_broker, mqtt_port);
 client.setCallback(callback);
 while (!client.connected()) {
@@ -311,11 +297,10 @@ void callback(char *topic, byte *payload, unsigned int length) {
 ```c
 #include <ESP8266WiFi.h>
 #include <PubSubClient.h>
-#include <WiFiClientSecureBearSSL.h>
 
 // WiFi
-const char *ssid = "mousse"; // Enter your WiFi name
-const char *password = "qweqweqwe";  // Enter WiFi password
+const char *ssid = "[WIFI SSID]"; // Enter your WiFi name
+const char *password = "[WIFI password]";  // Enter WiFi password
 
 // MQTT Broker
 const char *mqtt_broker = "broker.emqx.io"; // broker address
@@ -324,36 +309,23 @@ const char *mqtt_username = "emqx"; // username for authentication
 const char *mqtt_password = "public"; // password for authentication
 const int mqtt_port = 8883; // port of MQTT over TLS/SSL
 
-
-// load DigiCert Global Root CA ca_cert
-const char * ca_cert = \
-  "-----BEGIN CERTIFICATE-----\n"\
-"MIIDrzCCApegAwIBAgIQCDvgVpBCRrGhdWrJWZHHSjANBgkqhkiG9w0BAQUFADBh\n"\
-"MQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3\n"\
-"d3cuZGlnaWNlcnQuY29tMSAwHgYDVQQDExdEaWdpQ2VydCBHbG9iYWwgUm9vdCBD\n"\
-"QTAeFw0wNjExMTAwMDAwMDBaFw0zMTExMTAwMDAwMDBaMGExCzAJBgNVBAYTAlVT\n"\
-"MRUwEwYDVQQKEwxEaWdpQ2VydCBJbmMxGTAXBgNVBAsTEHd3dy5kaWdpY2VydC5j\n"\
-"b20xIDAeBgNVBAMTF0RpZ2lDZXJ0IEdsb2JhbCBSb290IENBMIIBIjANBgkqhkiG\n"\
-"9w0BAQEFAAOCAQ8AMIIBCgKCAQEA4jvhEXLeqKTTo1eqUKKPC3eQyaKl7hLOllsB\n"\
-"CSDMAZOnTjC3U/dDxGkAV53ijSLdhwZAAIEJzs4bg7/fzTtxRuLWZscFs3YnFo97\n"\
-"nh6Vfe63SKMI2tavegw5BmV/Sl0fvBf4q77uKNd0f3p4mVmFaG5cIzJLv07A6Fpt\n"\
-"43C/dxC//AH2hdmoRBBYMql1GNXRor5H4idq9Joz+EkIYIvUX7Q6hL+hqkpMfT7P\n"\
-"T19sdl6gSzeRntwi5m3OFBqOasv+zbMUZBfHWymeMr/y7vrTC0LUq7dBMtoM1O/4\n"\
-"gdW7jVg/tRvoSSiicNoxBN33shbyTApOB6jtSj1etX+jkMOvJwIDAQABo2MwYTAO\n"\
-"BgNVHQ8BAf8EBAMCAYYwDwYDVR0TAQH/BAUwAwEB/zAdBgNVHQ4EFgQUA95QNVbR\n"\
-"TLtm8KPiGxvDl7I90VUwHwYDVR0jBBgwFoAUA95QNVbRTLtm8KPiGxvDl7I90VUw\n"\
-"DQYJKoZIhvcNAQEFBQADggEBAMucN6pIExIK+t1EnE9SsPTfrgT1eXkIoyQY/Esr\n"\
-"hMAtudXH/vTBH1jLuG2cenTnmCmrEbXjcKChzUyImZOMkXDiqw8cvpOp/2PV5Adg\n"\
-"06O/nVsJ8dWO41P0jmP6P6fbtGbfYmbW0W5BjfIttep3Sp+dWOIrWcBAI+0tKIJF\n"\
-"PnlUkiaY4IBIqDfv8NZ5YBberOgOzW6sRBc4L0na4UU+Krk2U886UAb3LujEV0ls\n"\
-"YSEY1QSteDwsOoBrp+uvFRTp2InBuThs4pFsiv9kuXclVzDAGySj4dzp30d8tbQk\n"\
-"CAUw7C29C79Fv1C5qfPrmAESrciIxpg0X40KPMbp1ZWVbd4="\
-"-----END CERTIFICATE-----\n";
-
 // init wifi client
-BearSSL::WiFiClientSecure espClient; 
-// use wifi client to init mqtt client
-PubSubClient client(espClient); 
+WiFiClientSecure espClient;
+PubSubClient client(espClient);
+
+/*
+  The common fingerprints of EMQX broker, for reference only.
+  If you are not using EMQX Cloud Serverless or public EMQX broker,
+  you need to calculate the sha1 fingerprint of your server certificate
+  and update the 'fingerprint' variable below.
+*/
+// 1. fingerprint of public emqx broker. Host: broker.emqx.io
+const char* fingerprint = "B6 C6 FF 82 C6 59 09 BB D6 39 80 7F E7 BC 10 C9 19 C8 21 8E";
+// 2. fingerprint of EMQX Cloud Serverless. Host: *.emqxsl.com
+// const char* fingerprint = "42:AE:D8:A3:42:F1:C4:1F:CD:64:9C:D7:4B:A1:EE:5B:5E:D7:E2:B5";
+// 3. fingerprint of EMQX Cloud Serverless. Host: *.emqxsl.cn
+// const char* fingerprint = "7E:52:D3:84:48:3C:5A:9F:A4:39:9A:8B:27:01:B1:F8:C6:AD:D4:47";
+
 
 void setup() {
   Serial.begin(115200);
@@ -364,9 +336,8 @@ void setup() {
   }
   Serial.println("Connected to the WiFi network");
 
-  // connecting to a mqtt broker
-  BearSSL::X509List ca(ca_cert);
-  espClient.setTrustAnchors(&ca);
+  // set fingerprint
+  espClient.setFingerprint(fingerprint);
   client.setServer(mqtt_broker, mqtt_port);
   client.setCallback(callback);
   while (!client.connected()) {
