add BYOC edition (#381)
* add byoc deployment docs

--- a/zh_CN/connect_to_deployments/esp8266.md
+++ b/zh_CN/connect_to_deployments/esp8266.md
@@ -46,7 +46,7 @@
 
 2. 设置 Wi-Fi 名称和密码，以及 MQTT 服务器连接地址和端口。
 
-> 示例代码将使用公共 MQTT 服务器来连接，公共 MQTT 服务器无需设置用户名和密码。如果您创建了部署，请在部署控制台找到相应的连接地址，请参考 [Serverless 认证鉴权](../deployments/auth_serverless.md)和[专有版认证鉴权](../deployments/auth_dedicated.md)设置用户名和密码。
+> 示例代码将使用公共 MQTT 服务器来连接，公共 MQTT 服务器无需设置用户名和密码。如果您创建了部署，请在部署控制台找到相应的连接地址，请参考 [Serverless 认证鉴权](../deployments/auth_serverless.md)和[专有版 / BYOC 认证鉴权](../deployments/auth_dedicated.md)设置用户名和密码。
 
 
 ```c
@@ -196,7 +196,7 @@ void loop() {
 
 2. 设置 Wi-Fi 名称和密码，以及 MQTT 服务器连接地址和端口。
 
-> 示例代码将使用公共 MQTT 服务器来连接，公共 MQTT 服务器无需设置用户名和密码。如果您创建了部署，请在部署控制台找到相应的连接地址，请参考 [Serverless 认证鉴权](../deployments/auth_serverless.md)和[专有版认证鉴权](../deployments/auth_dedicated.md)设置用户名和密码。。
+> 示例代码将使用公共 MQTT 服务器来连接，公共 MQTT 服务器无需设置用户名和密码。如果您创建了部署，请在部署控制台找到相应的连接地址，请参考 [Serverless 认证鉴权](../deployments/auth_serverless.md)和[专有版 / BYOC 认证鉴权](../deployments/auth_dedicated.md)设置用户名和密码。。
 > 
 
 ```c
@@ -212,7 +212,7 @@ const char *mqtt_password = "public"; // password for authentication
 const int mqtt_port = 8883; // port of MQTT over TLS/SSL
 ```
 
-3. EMQX 服务器的常见指纹，仅供参考。如果你没有使用 Serverless 部署或公共 broker、 你需要计算出你的服务器证书的sha1指纹 并更新下面的'fingerprint'变量。
+3. EMQX 服务器的常见指纹，仅供参考。如果你没有使用 Serverless 部署或公共 broker、 你需要计算出你的服务器证书的 sha1 指纹并更新下面的'fingerprint'变量。
 
 ```c
 // init wifi client
