add byoc on gcp info

--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -45,7 +45,7 @@ This section describes how to connect an ESP8266 client to MQTT broker over TCP 
 
 2. Set Wi-Fi name and password, and connection address and port.
 
-> The sample code will use a public MQTT server to connect, and the public MQTT server does not require a username and password. If you create a deployment, please refer to [Serverless Auth](../deployments/auth_serverless.md) or [Dedicated Auth](../deployments/auth_dedicated.md) to set username and password.
+> The sample code will use a public MQTT server to connect, and the public MQTT server does not require a username and password. If you create a deployment, please refer to [Serverless Auth](../deployments/auth_serverless.md) or [Dedicated / BYOC Auth](../deployments/auth_dedicated.md) to set username and password.
 
 
 ```c
@@ -194,7 +194,7 @@ This section describes how to connect an ESP8266 client to MQTT broker over TLS/
 
 2. Set Wi-Fi name and password, and connection address and port.
 
-> The sample code will use a public MQTT server to connect, and the public MQTT server does not require a username and password. If you create a deployment, please refer to [Serverless Auth](../deployments/auth_serverless.md) or [Dedicated Auth](../deployments/auth_dedicated.md) to set username and password.
+> The sample code will use a public MQTT server to connect, and the public MQTT server does not require a username and password. If you create a deployment, please refer to [Serverless Auth](../deployments/auth_serverless.md) or [Dedicated / BYOC Auth](../deployments/auth_dedicated.md) to set username and password.
 
 
 ```c
