--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -232,6 +232,16 @@ const char* fingerprint = "B6 C6 FF 82 C6 59 09 BB D6 39 80 7F E7 BC 10 C9 19 C8
 // const char* fingerprint = "7E:52:D3:84:48:3C:5A:9F:A4:39:9A:8B:27:01:B1:F8:C6:AD:D4:47";
 ```
 
+Openssl fingerprint
+``` bash
+openssl s_client -connect {Connection-Address}:8883 < /dev/null 2>/dev/null | openssl x509 -fingerprint -sha1 -noout -in /dev/stdin
+```
+
+For Windows PowerShell
+``` bash
+openssl s_client -connect {Connection-Address}:8883 | openssl x509 -fingerprint -sha1 -noout
+```
+
 4. Open a serial connection to output the result of the program and connect to the Wi-Fi network.
 
 ```c
