--- a/zh_CN/connect_to_deployments/esp8266.md
+++ b/zh_CN/connect_to_deployments/esp8266.md
@@ -233,6 +233,17 @@ const char* fingerprint = "B6 C6 FF 82 C6 59 09 BB D6 39 80 7F E7 BC 10 C9 19 C8
 // const char* fingerprint = "7E:52:D3:84:48:3C:5A:9F:A4:39:9A:8B:27:01:B1:F8:C6:AD:D4:47";
 ```
 
+Openssl 计算 fingerprint
+``` bash
+openssl s_client -connect {Connection-Address}:8883 < /dev/null 2>/dev/null | openssl x509 -fingerprint -sha1 -noout -in /dev/stdin
+```
+
+使用 Windows PowerShell 方式
+``` bash
+openssl s_client -connect {Connection-Address}:8883 | openssl x509 -fingerprint -sha1 -noout
+```
+
+
 4. 打开串行连接，以便于输出程序的结果并且连接到 Wi-Fi 网络。
 
 ```c
