--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -12,7 +12,7 @@ Before the connection, you need to get the broker and client ready.
 
 ### Get MQTT Broker
 
-You can use the [free public MQTT broker](https://www.emqx.com/en/mqtt/public-mqtt5-broker) provided by EMQX. This service was created based on the [EMQX Cloud](https://www.emqx.com/en/cloud). The information about broker access is as follows:
+You can use the [free public MQTT broker](https://www.emqx.com/en/mqtt/public-mqtt5-broker) provided by EMQX. This service was created based on the [EMQX Platform](https://www.emqx.com/en/cloud). The information about broker access is as follows:
 - Broker: **broker.emqx.io**
 - TCP Port: **1883**
 - SSL/TLS Port: **8883**
@@ -279,7 +279,7 @@ MrY=
 -----END CERTIFICATE-----
 )EOF";
 
-// Load DigiCert Global Root CA ca_cert, which is used by EMQX Cloud Serverless Deployment
+// Load DigiCert Global Root CA ca_cert, which is used by EMQX Serverless Deployment
 /*
 static const char ca_cert[] PROGMEM = R"EOF(
 -----BEGIN CERTIFICATE-----
@@ -435,7 +435,7 @@ MrY=
 -----END CERTIFICATE-----
 )EOF";
 
-// Load DigiCert Global Root CA ca_cert, which is used by EMQX Cloud Serverless Deployment
+// Load DigiCert Global Root CA ca_cert, which is used by EMQX Serverless Deployment
 /*
 static const char ca_cert[] PROGMEM = R"EOF(
 -----BEGIN CERTIFICATE-----
