--- a/zh_CN/connect_to_deployments/esp8266.md
+++ b/zh_CN/connect_to_deployments/esp8266.md
@@ -11,7 +11,7 @@
 在进行连接之前，您需要准备好 MQTT 服务器和客户端。
 
 ### 获得 MQTT Broker
-使用 EMQX 提供的 [免费公共 MQTT 服务器](https://www.emqx.com/zh/mqtt/public-mqtt5-broker)，该服务基于 EMQX 的 [MQTT 物联网云平台](https://www.emqx.com/zh/cloud) 创建。服务器接入信息如下：
+使用 EMQX 提供的 [免费公共 MQTT 服务器](https://www.emqx.com/zh/mqtt/public-mqtt5-broker)，该服务基于 EMQX 的 [MQTT 物联网云平台](https://www.emqx.com/zh) 创建。服务器接入信息如下：
 
 - Broker: **broker.emqx.io**
 - TCP Port: **1883**
