Change "Cloud" to "Platform" and screenshots update

--- a/zh_CN/connect_to_deployments/esp8266.md
+++ b/zh_CN/connect_to_deployments/esp8266.md
@@ -281,7 +281,7 @@ MrY=
 -----END CERTIFICATE-----
 )EOF";
 
-// Load DigiCert Global Root CA ca_cert, which is used by EMQX Cloud Serverless Deployment
+// Load DigiCert Global Root CA ca_cert, which is used by EMQX Platform Serverless Deployment
 /*
 static const char ca_cert[] PROGMEM = R"EOF(
 -----BEGIN CERTIFICATE-----
@@ -439,7 +439,7 @@ MrY=
 -----END CERTIFICATE-----
 )EOF";
 
-// Load DigiCert Global Root CA ca_cert, which is used by EMQX Cloud Serverless Deployment
+// Load DigiCert Global Root CA ca_cert, which is used by EMQX Platform Serverless Deployment
 /*
 static const char ca_cert[] PROGMEM = R"EOF(
 -----BEGIN CERTIFICATE-----
